<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Tip Calculator</string>
	<string name="billTotal">Bill total</string>
	<string name="tip">Tip</string>
	<string name="total">Total</string>
	<string name="custom">Custom</string>
	<string name="zero" translatable="false">0.00</string>
	<string name="_18" translatable="false">18%</string>
	<string name="_20" translatable="false">20%</string>
	<string name="_15" translatable="false">15%</string>
	<string name="_10" translatable="false">10%</string>
</resources>
