<?xml version="1.0" encoding="utf-8"?>
<!-- main.xml -->
<!-- Tip Calculator's XML Layout -->

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#FFF" android:id="@+id/tableLayout"
    android:stretchColumns="1,2,3" android:padding="5dp"
    android:layout_weight="5">

    <!-- tableRow0 -->
    <TableRow android:layout_height="wrap_content"
        android:layout_width="match_parent" android:id="@+id/tableRow0"
        android:layout_weight="1">

        <TextView
            android:id="@+id/billTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/billTotal"
            android:textColor="#000"
            android:gravity="end"
            android:paddingRight="5dp"
            android:paddingEnd="5dp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:layout_width="wrap_content"
            android:id="@+id/billEditText"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:inputType="numberDecimal"
            android:layout_weight="1"
            android:textColor="@android:color/background_dark"
            tools:ignore="LabelFor" />

    </TableRow>

    <!-- tableRow1 -->
    <TableRow android:layout_height="wrap_content"
        android:layout_width="match_parent" android:id="@+id/tableRow1"
        android:layout_weight="0.5">

        <TextView
            android:id="@+id/tenTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10"
            android:textColor="#000"
            android:layout_column="1"
            android:gravity="center"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/fifteenTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_15"
            android:textColor="#000"
            android:gravity="center"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/twentyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_20"
            android:textColor="#000"
            android:gravity="center"
            android:layout_weight="1" />

    </TableRow>

    <!-- tableRow2 -->
    <TableRow android:layout_height="wrap_content"
        android:layout_width="match_parent" android:id="@+id/tableRow2"
        android:layout_weight="0.5">

        <TextView
            android:id="@+id/tipTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip"
            android:textColor="#000"
            android:gravity="end"
            android:paddingRight="5dp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <EditText
            android:layout_width="wrap_content"
            android:id="@+id/tip10EditText"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:gravity="center"
            android:focusable="false"
            android:layout_weight="1"
            android:textSize="14sp"
            android:cursorVisible="false"
            android:longClickable="false"
            android:textColor="@android:color/background_dark"
            android:hint="@string/_10"
            android:inputType="numberDecimal"/>

        <EditText
            android:layout_width="wrap_content"
            android:id="@+id/tip15EditText"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:gravity="center"
            android:focusable="false"
            android:layout_weight="1"
            android:textSize="14sp"
            android:cursorVisible="false"
            android:longClickable="false"
            android:textColor="@android:color/background_dark"
            android:hint="@string/_15"
            android:inputType="numberDecimal"/>

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/tip20EditText"
            android:text="@string/zero"
            android:gravity="center"
            android:focusable="false"
            android:layout_weight="1"
            android:textSize="14sp"
            android:cursorVisible="false"
            android:longClickable="false"
            android:textColor="@android:color/background_dark"
            android:hint="@string/_20"
            android:inputType="numberDecimal"/>

    </TableRow>

    <!-- tableRow3 -->
    <TableRow android:layout_height="wrap_content"
        android:layout_width="match_parent" android:id="@+id/tableRow3"
        android:layout_weight="1.5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/totalTextView"
            android:text="@string/total"
            android:textColor="#000"
            android:gravity="end"
            android:paddingRight="5dp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <EditText
            android:layout_width="wrap_content"
            android:text="@string/zero"
            android:layout_height="wrap_content"
            android:id="@+id/total10EditText"
            android:gravity="center"
            android:focusable="false"
            android:layout_weight="1"
            android:textSize="14sp"
            android:cursorVisible="false"
            android:longClickable="false"
            android:textColor="@android:color/background_dark"
            android:hint="@string/_10"
            android:inputType="numberDecimal"/>

        <EditText
            android:layout_width="wrap_content"
            android:text="@string/zero"
            android:layout_height="wrap_content"
            android:id="@+id/total15EditText"
            android:gravity="center"
            android:focusable="false"
            android:layout_weight="1"
            android:textSize="14sp"
            android:cursorVisible="false"
            android:longClickable="false"
            android:textColor="@android:color/background_dark"
            android:hint="@string/_15"
            android:inputType="numberDecimal"/>

        <EditText
            android:layout_width="wrap_content"
            android:text="@string/zero"
            android:layout_height="wrap_content"
            android:id="@+id/total20EditText"
            android:gravity="center"
            android:focusable="false"
            android:layout_weight="1"
            android:textSize="14sp"
            android:cursorVisible="false"
            android:longClickable="false"
            android:textColor="@android:color/background_dark"
            android:hint="@string/_20"
            android:inputType="numberDecimal"/>

    </TableRow>

    <!-- tableRow4 -->
    <TableRow android:layout_height="wrap_content"
        android:layout_width="match_parent" android:id="@+id/tableRow4"
        android:layout_weight="0.1">

        <TextView
            android:id="@+id/customTextView"
            android:layout_width="wrap_content"
            android:text="@string/custom"
            android:textColor="#000"
            android:paddingRight="5dp"
            android:gravity="right|center_vertical"
            android:layout_height="match_parent"
            android:paddingBottom="5dp"
            android:focusable="false"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <SeekBar
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/customSeekBar"
            android:layout_span="2"
            android:progress="18"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="5dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/customTipTextView"
            android:layout_width="wrap_content"
            android:text="@string/_18"
            android:textColor="#000"
            android:gravity="center_vertical"
            android:layout_height="match_parent"
            android:paddingLeft="5dp"
            android:paddingBottom="5dp"
            android:focusable="false"
            android:layout_weight="1"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

    </TableRow>

    <!-- tableRow5 -->
    <TableRow android:layout_height="wrap_content"
        android:layout_width="match_parent" android:id="@+id/tableRow5"
        android:layout_weight="2.4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tipCustomTextView"
            android:text="@string/tip"
            android:textColor="#000"
            android:gravity="end"
            android:paddingRight="5dp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tipCustomEditText"
            android:text="@string/zero"
            android:gravity="center"
            android:focusable="false"
            android:layout_weight="1"
            android:textSize="14sp"
            android:cursorVisible="false"
            android:longClickable="false"
            android:textColor="@android:color/background_dark"
            android:hint="@string/custom"
            android:inputType="numberDecimal"/>

        <TextView
            android:id="@+id/totalCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textColor="#000"
            android:gravity="end"
            android:paddingRight="5dp"
            android:layout_weight="1"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/totalCustomEditText"
            android:text="@string/zero"
            android:gravity="center"
            android:focusable="false"
            android:layout_weight="1"
            android:textSize="14sp"
            android:cursorVisible="false"
            android:longClickable="false"
            android:textColor="@android:color/background_dark"
            android:hint="@string/total"
            android:inputType="numberDecimal"/>
    </TableRow>
</TableLayout>

    <!--
    **************************************************************************
    * (C) Copyright 1992-2012 by Deitel & Associates, Inc. and               *
    * Pearson Education, Inc. All Rights Reserved.                           *
    *                                                                        *
    * DISCLAIMER: The authors and publisher of this book have used their     *
    * best efforts in preparing the book. These efforts include the          *
    * development, research, and testing of the theories and programs        *
    * to determine their effectiveness. The authors and publisher make       *
    * no warranty of any kind, expressed or implied, with regard to these    *
    * programs or to the documentation contained in these books. The authors *
    * and publisher shall not be liable in any event for incidental or       *
    * consequential damages in connection with, or arising out of, the       *
    * furnishing, performance, or use of these programs.                     *
    **************************************************************************
     -->
